tests/paczka1/fuzzy1/26372354.err
Error in line 15: JheV6S4M A165 175,7
Error in line 19: YMC7 A165 25,1
Error in line 30: B9ek2xL A680 65,4
Error in line 38: B9ek2xL A590 31,1
